# MeetingAppBackend

./: .env.sample  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: Dockerfile  config.py  init.sh  main.py
app/api/: __init__.py
app/api/auth/: dependencies.py  routes.py  schemas.py  service.py
app/api/user/: routes.py  schemas.py  service.py
app/api/user_interest/: routes.py  schemas.py  service.py
app/core/: database.py
app/core/models/: __init__.py  event.py  location.py  user.py  user_interest.py
app/core/scripts/user_interest/: importer.py  interests.txt
app/core/services/: email_service.py  redis_service.py
app/core/utils/: age.py  otp.py  templates.py
app/database/: db.py
app/templates/email/: password_reset.html  verification.html
