[project]
name = "meeting-app-backend"
version = "0.1.0"
description = "Meeting App Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=1.29.0",
    "boto3>=1.37.33",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.2",
    "phonenumbers>=9.0.2",
    "pydantic>=2.11.2",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.11.3",
    "redis>=6.0.0",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
dummy-variable-rgx = "^_$" # only ignore variables named "_"
fixable = ["F401"]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "E",      # pycodestyle
    "D",      # pydocstyle
    "F",      # pyflakes
    "G",      # flake8-logging-format
    "I",      # isort
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "S",      # flake8-bandit
    "W",      # pycodestyle
    "ASYNC",  # flake8-async
    "LOG",    # flake8-logging
    "SIM",    # flake8-simplify
    "ANN202", # flake8-annotations
    "ANN205", # flake8-annotations
    "ANN206", # flake8-annotations
    "COM812", # flake8-commas
    "COM818", # flake8-commas
    "D204",   # pydocstyle
]
ignore = [
    "B008", # flake8-bugbear
    "D100", # pycodestyle
    "D104", # pycodestyle
    "D105", # pycodestyle
    "D200", # pycodestyle
    "D212", # pycodestyle
    "S105", # flake8-bandit
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
typeCheckingMode = "standard"
